--- a/HtmlFiles/loginPage.html
+++ b/HtmlFiles/loginPage.html
@@ -27,7 +27,7 @@
                 <div class="slider-tab"></div>
             </div>
             <div class="form-inner">
-                <form action="#" class="login">
+                <form action="homePage.html" class="login">
                     <div class="field">
                         <input type="text" placeholder="Email Address" required>
                     </div>
