--- a/HtmlFiles/index.html
+++ b/HtmlFiles/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Login</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <div class="center">
-        <div class="header">
-          <img src="instagramlogo.png" alt="instagramLogo" class="instaLogo" />
+<html>
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../CssFiles/index.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black  navbg">
+        <a class="navbar-brand" href="#">
+            <img src="https://assets.ccbp.in/frontend/responsive-website/landing-section-design-logo-img.png" class="image" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+                <a class="nav-link active" href="#">
+                    Home
+                    <span class="sr-only">(current)</span>
+                </a>
+                <a class="nav-link text-white" href="#">Places</a>
+                <a class="nav-link text-white" href="#">Wishlist</a>
+                <a class="nav-link text-white" href="#">Previous Trips</a>
+                <a class="nav-link text-white" href="#">EDD Money</a>
+                <a class="nav-link disabled text-white" href="#" tabindex="-1" aria-disabled="true">Contacts</a>
+            </div>
         </div>
-        <div class="inputElement">
-          <input
-            type="text"
-            placeholder="Phone number,username or email"
-            class="inputText"
-          />
-          <input type="password" placeholder="Password" class="inputText" />
-          <input type="submit" value="Log in" class="inputButton" />
-          <div class="line">
-            <span class="arrow"></span>
-            <span class="content">OR</span>
-            <span class="arrow"></span>
-          </div>
-          <div class="social__icon">
-            <i class="fab fa-facebook-square"></i
-            ><span>Log in with facebook</span>
-          </div>
-          <div class="forgetPassword">Forget Password?</div>
+    </nav>
+    <div class="bg-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 bg text-center d-flex flex-column justify-content-center">
+                    <h1 class="head ">EDD <span style="color:#FFDDA9">Flexible</span> web design tool</h1>
+                    <p class="para pt-3">We've done it carefully and simply,combined with the ingredients makes for beautiful landings.It is the tool you need to speed up your design process.</p>
+                    <div class="d-flex flex-row justify-content-center">
+                        <button class="button mt-2" onclick="signInBtn()">Sign In</button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="footer">
-        <p>Don't have a accout?<span>Sign Up</span></p>
-      </div>
     </div>
-  </body>
+    <script>
+        function signInBtn(){
+            window.location = 'loginPage.html';
+        }
+    </script>
+</body>
+
 </html>
